# rustpass

./: .gitignore  Cargo.toml  README.md  passwords.json  release.sh  rsp
src/: lib.rs  main.rs  passwords.json  state.rs
src/auth/: handler.rs
src/cli/: commands.rs  handler.rs  mod.rs
src/daemon/: client.rs  ipc.rs  mod.rs  service.rs  session.rs
src/data/: data.rs
src/encryption/: decrypt.rs  encrypt.rs
src/models/: data.rs  structs.rs  types.rs
src/state/: data.rs  key.rs  manager.rs  mod.rs
src/tui/: app.rs  data.rs  events.rs  keybindings.rs  layout.rs  mod.rs  widgets.rs
src/tui/widgets/: help.rs  layout.rs  list.rs  mod.rs  modal.rs  notification.rs  preview.rs  search.rs  ui.rs
src/utils/: fuzzy_finder.rs  logger.rs  mod.rs  verify_passwords.rs
tests/: encryption_tests.rs
