[package]
name = "rustpass"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"                                 # Fork of `tui-rs`
crossterm = "0.27"                                 # Terminal event handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"                                 # Required for JSON serialization/deserialization
env_logger = "0.11.6"
log = "0.4.25"
chrono = "0.4.39"
arboard = "3.3"
pam = "0.8.0"                                       # PAM authentication
systemd = "0.10.0"                                  # Systemd integration for session management
zbus = "3.14.1"                                     # D-Bus communication for systemd-logind
tokio = { version = "1.36.0", features = ["full"] } # Async runtime for session monitoring
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.9.0"
base64 = "0.22.1"
clap = "4.5.32"
dialoguer = "0.11.0"
lazy_static = "1.4.0"
rpassword = "7.3.1"
uuid = { version = "1.6.1", features = ["v4"] }

[[bin]]
name = "rsp"
path = "src/main.rs"